a drop of stylling

--- a/src/App.css
+++ b/src/App.css
@@ -122,3 +122,11 @@ top: 7px;
 right: 27px;
 outline: none;
 }
+
+.ride-list {
+  padding-left: 50px;
+  padding-right: 50px;
+  border: 2px solid blue;
+  padding: 10px;
+  border-radius: 25px;
+}
