--- a/src/App.css
+++ b/src/App.css
@@ -277,3 +277,36 @@ img{ max-width:100%;}
   height: 516px;
   overflow-y: auto;
 }
+/*///////
+///*bootsnip
+///////*/
+pre {
+          tab-size: 8;
+      }
+
+      @media screen and (max-width: 768px) {
+          .side-collapse-container{
+              width:100%;
+              position:relative;
+              left:0;
+              transition:left .4s;
+          }
+          .side-collapse-container.out{
+              left:200px;
+          }
+          .side-collapse {
+              top:50px;
+              bottom:0;
+              left:0;
+              width:200px;
+              position:fixed;
+              overflow:hidden;
+              transition:width .4s;
+          }
+          .side-collapse.in {
+              width:0;
+          }
+      }
+/******
+****end of bootsnip
+***/
