--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,6 @@
 } */
 
 
-
 #edit-profile {
   margin-top: 10px;
 }
@@ -310,3 +309,13 @@ pre {
 /******
 ****end of bootsnip
 ***/
+.col-centered{
+    float: none;
+    margin: 0 auto;
+}
+.centered {
+  height: 100vh; /* Magic here */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
