--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,16 @@
   min-width: 60vh;
 
 }
+.menu-item{
+  margin-left: 5rem;
+  padding:0px 0;
+  color:white;
+
+}
 #profile-rides-list{
+  margin-top:120px;
+}
+#rides-list{
   margin-top:120px;
 }
 body{
@@ -89,6 +98,9 @@ body{
 
 
 body { margin-top:10px; }
+.list-group{
+  margin-top:100px;
+}
 .fa { font-size: 50px;text-align: right;position: absolute;top: 200px;right: 27px;outline: none; }
 a { transition: all .3s ease;-webkit-transition: all .3s ease;-moz-transition: all .3s ease;-o-transition: all .3s ease; }
 /* Visitor */
