--- a/src/App.css
+++ b/src/App.css
@@ -391,7 +391,7 @@ pre {
               width:0;
           }
           #profile-card-container{
-            width:85%;
+            width:40rem;
 
           }
       }
