--- a/src/App.css
+++ b/src/App.css
@@ -357,6 +357,11 @@ img{ max-width:100%;}
   top: 11px;
   width: 36px;
 }
+#authbutton{
+  padding:20px;
+  padding-right:10px;
+  padding-left:10px;
+}
 .messaging { padding: 0 0 50px 0;}
 .msg_history {
   height: 20rem;
