--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,9 @@
   color:white;
 
 }
+.responsivetable{
+  overflow-x: auto;
+}
 #profile-rides-list{
   margin-top:120px;
   /* overflow-x: auto; */
