--- a/src/App.css
+++ b/src/App.css
@@ -208,6 +208,7 @@ outline: none;
   text-align: center;
 }
 .profile-following{
+  margin-top:10rem;
   width: 18rem;
 
 }
@@ -443,5 +444,5 @@ pre {
   /* margin-right:50%; */
 }
 .card-group{
-  margin-top:120px;
+  margin-top:50px;
 }
