--- a/src/App.css
+++ b/src/App.css
@@ -192,8 +192,8 @@ outline: none;
 }
 
 .follower-card {
-  width: 40rem;
-  length: 40rem;
+  width: 100%;
+  height:100%;
 }
 #following-card{
   width:14rem;
@@ -206,17 +206,17 @@ outline: none;
 
 
 .follower-container {
-  border: 2px solid ;
-  padding: 10px;
-  border-radius: 25px;
+  /* border: 2px solid ; */
+  height:100%;
+  width:100%;
 }
 
 .some-h2 {
   text-align: center;
 }
 .profile-following{
-  margin-top:10rem;
-  width: 18rem;
+  margin-top:5rem;
+  width: 100%;
 
 }
 .card-rows {
@@ -450,15 +450,26 @@ pre {
   /* align-items:center; */
   /* margin-right:50%; */
 }
-.card-group{
-  margin-top:50px;
+
+.card-container {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  box-sizing: border-box;
+
+  @media screen and (max-width: 768px) {
+    flex-flow: column;
+  }
 }
 /*////////////////////////////////////////*/
 /*table stuff*/
 
-table{
+.ridestable table {
   width: 100%;
   border-collapse: collapse;
+  table-layout: fixed;
 }
 /* Zebra striping */
 tr:nth-of-type(odd) {
@@ -475,6 +486,20 @@ td, th {
   border: 1px solid #ccc;
   text-align: left;
   width:1px;
+}
+#addbuttonrow{
+  width:100%;
+}
+.addrideinput{
+  width:100%;
+}
+.ridestable th{
+  /* max-width: 3px; */
+  width: 5px;
+}
+.ridestable td{
+  width:100%;
+  /* max-width:30px */
 }
 
 /**************************
@@ -551,11 +576,119 @@ only screen and (max-width: 760px),
   .ridestable td:nth-of-type(6):before { content: "Ending Location"; }
 
   .forumstable td:nth-of-type(1):before{content:'Forum Topic';font-style: oblique;}
-  .forumstable thead{width:100%;
-
+  .forumstable thead{width:100%;  }
+  .addrideinput{
+    margin-top:20px;
+    /* padding:20px; */
+    width:100%;
   }
+
 
 }
 /**************************
 ************ END OF Rresponsive table
 **********************/
+
+/*********************
+******** toggle slider
+************************/
+.slide-toggle {
+  outline: 1px solid black;
+  max-width: $max-width;
+  margin: 0 auto;
+  margin-bottom: 1rem;
+  box-sizing: border-box;
+  &--special {
+    .slide-toggle__header {
+    }
+    .progress-bar__inner {
+      transition: background 300ms;
+    }
+    &.expanded {
+      .slide-toggle__header {
+      }
+      .progress-bar__inner {
+        background: rgba(white, 0.8);
+      }
+    }
+  }
+  &__header {
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    padding: 1rem;
+    outline: 1px solid black;
+    position: relative;
+    background: linear-gradient(90deg, rgba($color-2, 1), rgba($color-2, 1));
+  }
+  &__toggle {
+    font-size: 1rem;
+    border: 1px solid gray;
+    padding: 0.5rem;
+    box-shadow: none;
+    margin-right: 1rem;
+  }
+  &__box {
+
+  }
+  &__box-inner {
+    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.5;
+
+    p {
+      margin: 0;
+      padding: 0;
+      margin-bottom: 1rem;
+    }
+
+    button {
+      margin: 1rem auto 0;
+      display: block;
+    }
+  }
+}
+
+
+
+
+.progress-bar {
+  height: 2px;
+  display: inline-block;
+  flex: 1 1 0%;
+  position: relative;
+
+  &__inner {
+    position: absolute;
+    width: 100%;
+    height: inherit;
+    top: 0;
+    left: 0;
+    will-change: transform;
+    background: rgba(white, 0.5);
+    transform-origin: 0 0;
+  }
+}
+
+#followingbutton {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  font-size: 1rem;
+  border: 1px solid gray;
+  padding: 0.5rem 0.75rem;
+  box-shadow: none;
+  border-radius: 0.5rem;
+  background: linear-gradient(
+    0deg,
+    rgba(mix($color-2, white, 20%), 1),
+    rgba(white, 1)
+  );
+}
+
+
+
+
+
+/*********************
+******** end of toggle slider
+************************/
