--- a/src/App.css
+++ b/src/App.css
@@ -558,6 +558,9 @@ only screen and (max-width: 760px),
 		padding-right: 10px;
 		white-space: nowrap;
 	}
+  .ridestable th{
+    width:100%;
+  }
   .ridetable td.input{
     width:100%;
     top:-5px;
