--- a/src/App.css
+++ b/src/App.css
@@ -376,9 +376,12 @@ img{ max-width:100%;}
   width: 36px;
 }
 #authbutton{
-  padding:20px;
-  padding-right:10px;
-  padding-left:10px;
+  /* padding:20px; */
+  /* padding-right:10px;
+  padding-left:10px; */
+  margin-left: 15px;
+  margin-right: 15px;
+  width:25%;
 }
 .messaging { padding: 0 0 50px 0;}
 .msg_history {
@@ -425,7 +428,7 @@ pre {
 ***/
 #discoverpage{
   margin-right: auto;
-  margin-top:15px;
+  margin-top:100px;
 }
 .col-centered{
     float: none;
@@ -717,6 +720,7 @@ only screen and (max-width: 760px),
 ************************/
 .authBox {
   width: 50%;
+  min-width: 400px;
   text-align: center;
   position: relative;
   left: 50%;
@@ -752,8 +756,16 @@ only screen and (max-width: 760px),
   color: gray;
 }
 #pwShowHideBtn{
-  width:60%;
-  max-height: 80px;
+  max-width: 40px;
+  max-height: 40px;
+  margin-left:85px;
+  margin-top:-25px;
+  position: absolute;
+  /* transform: 'translateX(-50%)';
+  align:'center';
+  align-content: center;
+  left:20%;
+  color: 'green'; */
 
 }
 
