--- a/src/App.css
+++ b/src/App.css
@@ -426,6 +426,10 @@ pre {
 ****end of bootsnip
 
 ***/
+.profilepage{
+  margin-right:auto;
+}
+
 #discoverpage{
   margin-right: auto;
   margin-top:100px;
