--- a/src/App.css
+++ b/src/App.css
@@ -44,17 +44,10 @@
 } */
 
 #profile-card-container{
-  /* padding-left: 15px; */
   margin-top:120px;
-  /* padding-right: 10px; */
-  /* padding-left: 10px; */
   margin-left:20px;
-  max-width: 80%;
-  /* width:100%; */
-  /* width:30%; */
-  /* width:40vh; */
-  /* max-width: 35vh;
-  min-width: 33vh; */
+  max-width: 175px;
+  
 
 }
 .menu-item{
