--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 .App {
   text-align: center;
-}
+};
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
-}
+};
 
 .App-header {
   background-color: #282c34;
@@ -18,35 +18,28 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+};
 
 .App-link {
   color: #61dafb;
-}
-/*
-.profile-forums{
-  padding: 0px;
-} */
+};
 
-/* #profile-forums th{
-  width: 1% !important;
-} */
 .navbar-toggler{
- 
     background-color: white;
+};
 
-  
-}
 #menu-item {
   text-decoration: none !important;
-}
+};
+
 #menu-item a:hover {
   margin: 0 !important;
   padding: 10px !important;
   border-radius: 10px;
   background-color: #007bff;
   color:white;
-}
+};
+
 
 @media only screen and (max-width: 767px) {
   #menu-item a {
@@ -57,15 +50,13 @@
     width:100% !important;
     background-color: white;
     justify-content: center;
-  }
+  };
+
   #menu-item{
     margin-left: 0 !important;
     padding: 0 !important
-  }
-  
-}
-
-
+  };
+};
 
 #menu-item {
    margin-left: 5rem;
@@ -75,69 +66,63 @@
   border-radius: 10px;
   border-style: groove;
   background-color: #ced4da;
-}
-/* .menu-item button:hover{
-  background-color: black;
-} */
-
-
+};
 
 #edit-profile {
   margin-top: 10px;
   width:100%;
-}
-
-/* .container .col-12{
-   padding-top:20px;
-   margin-top: 20px;
-} */
+};
 
 #profile-card-container{
   margin-top:120px;
   margin-left:20px;
   max-width: 175px;
-  
+};
 
-}
 .menu-item{
   margin-left: 5rem;
   padding:0px 0;
   color:white;
 
-}
+};
+
 .responsivetable{
   overflow-x: auto;
-}
+};
+
 .forumstable{
   overflow-x:auto;
+};
 
-}
 .ridestable{
   overflow-x:hidden;
   width: 100%;
-}
+};
+
 #profile-rides-list{
   margin-top:120px;
   overflow-x: auto;
   width:50%;
-}
+};
+
 #rides-list{
   margin-top:120px;
-}
+};
+
 #forum-list{
   /* margin-top:100px; */
-}
+};
+
 body{
   background-color: white;
-}
+};
+
 .header{
   margin-top:-10px;
   position:fixed;
   width:100%;
   z-index:999;
-
-
-}
+};
 
 .title {
   background-color: black;
