--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 .App {
   text-align: center;
-};
+}
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
-};
+}
 
 .App-header {
   background-color: #282c34;
@@ -18,19 +18,19 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-};
+}
 
 .App-link {
   color: #61dafb;
-};
+}
 
 .navbar-toggler{
     background-color: white;
-};
+}
 
 #menu-item {
   text-decoration: none !important;
-};
+}
 
 #menu-item a:hover {
   margin: 0 !important;
@@ -38,7 +38,7 @@
   border-radius: 10px;
   background-color: #007bff;
   color:white;
-};
+}
 
 
 @media only screen and (max-width: 767px) {
@@ -56,7 +56,7 @@
     margin-left: 0 !important;
     padding: 0 !important
   };
-};
+}
 
 #menu-item {
    margin-left: 5rem;
@@ -66,29 +66,29 @@
   border-radius: 10px;
   border-style: groove;
   background-color: #ced4da;
-};
+}
 
 #edit-profile {
   margin-top: 10px;
   width:100%;
-};
+}
 
 #profile-card-container{
   margin-top:120px;
   margin-left:20px;
   max-width: 175px;
-};
+}
 
 .menu-item{
   margin-left: 5rem;
   padding:0px 0;
   color:white;
 
-};
+}
 
 .responsivetable{
   overflow-x: auto;
-};
+}
 
 .forumstable{
   overflow-x:auto;
@@ -269,7 +269,6 @@ outline: none;
   }
 }
 
-////////////////////////////////////////////////////////////////////////////////////////////////
 .container{
   display: flex;
   flex-direction: column;
