--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@
 #profile-card-container{
   margin-top:120px;
   margin-left:20px;
-  max-width: 175px;
+  max-width: 250px;
 }
 
 .menu-item{
@@ -505,8 +505,8 @@ pre {
   top: 0;
 }
 .card-img-top{
-  width:100%;
-  height:auto;
+  width:250px;
+  height:250px;
 }
 .followercardimg{
   width:10rem;
