--- a/src/App.css
+++ b/src/App.css
@@ -32,17 +32,17 @@
   text-decoration: none !important;
 }
 
-/* #menu-item a {
- 
- color:white;
-} */
+#menu-item  {
+  background-color:none;
+}
 
 #menu-item a:hover {
    margin: 0 !important;
   padding: 10px !important; 
   border-radius: 10px;
-  background-color: #007bff;
+  background-color: black;
   color:white;
+  /*#007bff;*/
 }
 
 
@@ -841,23 +841,51 @@ only screen and (max-width: 760px),
 /*********************
 ******** modal
 ************************/
-#editmodal{
+#edit-modal{
   width: 60%;
   min-width: 400px;
   height: 80%;
   margin-left:50%;
   margin-top:-30px;
-
   text-align: center;
   position: relative;
-  /* left: 50%; */
+  align-items: center;
+  display: grid;
   transform: translate(-50%, 20%);
   padding: 20px;
   background-color: white;
   box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.4);
+}
+
+.edit-modal-columns{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.edit-modal-profile-pic{
+  flex-direction: column;
+}
+
+.edit-modal-left{
+  display: grid;
+
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.edit-modal-inputs{
+  display: flex;
+  flex-direction: column;
 
 }
-#editmodal TextField{
+
+.edit-modal-companies{
+  display: flex;
+  flex-direction: row;
+}
+
+#edit-modal TextField{
   width:100%;
 
 }
@@ -880,40 +908,37 @@ only screen and (max-width: 760px),
   font-weight: 600;
   margin-bottom: 1rem;
   outline: none;
-  padding: 1rem 50px;
+  padding: 1rem 1rem;
   position: relative;
   transition: all 0.3s;
   vertical-align: middle;
+}
 
-  &:hover {
+  #inputFile:hover{
     background-color: darken(#f15d22, 10%);
   }
 
-  &.btn-2 {
+  .btn-2:before {
+    color: #fff;
+    content: "\f382";
+    font-family: "Font Awesome 5 Pro";
+    font-size: 100%;
+    height: 100%;
+    right: 130%;
+    line-height: 3.3;
+    position: absolute;
+    top: 0px;
+    transition: all 0.3s;
+  }
+
+  .btn-2 {
     background-color: #99c793;
     border-radius: 50px;
     overflow: hidden;
+  }
 
-    &::before {
-      color: #fff;
-      content: "\f382";
-      font-family: "Font Awesome 5 Pro";
-      font-size: 100%;
-      height: 100%;
-      right: 130%;
-      line-height: 3.3;
-      position: absolute;
-      top: 0px;
-      transition: all 0.3s;
-    }
-
-    &:hover {
-      background-color: darken(#99c793, 30%);
-
-      &::before {
-        right: 75%;
-      }
-    }
+  .btn-2:hover {
+    background-color: darken(#99c793, 30%);
   }
 
   &.btn-3 {
@@ -954,9 +979,8 @@ only screen and (max-width: 760px),
       }
     }
   }
-}
 
-.savebutton{
+.save-button{
   width:65%;
   height:60px;
   margin-top:20px;
